--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="col-sm-4 col-md-4">
 				<div class="detail-row">
-					<label>Sector</label>
+					<label>Sub-type</label>
 					<span class="value">{{ ::project.sector }}</span>
 				</div>
 			</div>
