--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -4,6 +4,7 @@
 		<h1>{{ project.name }}</h1>
 		<div class="actions">
 			<div class="btn-group" ng-if="environment === 'EAO' && authentication.user">
+				<a class="btn btn-default btn-sm" ui-sref="p.edit({pId:o._id})">Edit Project</a>
 				<a class="btn btn-success btn-sm" ng-click="publishProject()" ng-if="!project.isPublished">Publish Project</a>
 			</div>
 			<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="project"></tmpl-permissions-gear>
