Changing VC selector to have filters and dropdowns and correct pagination.

--- a/modules/vcs/client/views/topic-modal-select.html
+++ b/modules/vcs/client/views/topic-modal-select.html
@@ -4,19 +4,20 @@
 	<div class="modal-header">
 		<h3 class="modal-title">Add Valued Component(s)</h3>
 	</div>
-
 	<div class="modal-body">
 		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
-				<tr ng-repeat="o in $data" ui-sref="admin.topic.detail({topicId:o._id})" class="clickable">
-					<td class="select-col"><input type="checkbox" /></td>
-					<td data-title="'Pillar'"  sortable="'pillar'"  filter="{'pillar':'select'}" filter-data="pillars" 		>{{o.pillar}}</td>
-					<td data-title="'Name'"    sortable="'name'"    filter="{'name':'text'}"                           		>{{o.name}}</td>
-					<td data-title="'Type'"    sortable="'type'"    filter="{'type':'select'}"   filter-data="getTypes()"   >{{o.type}}</td>
-					<td data-title="'Parent'"  sortable="'parent'"  filter="{'parent':'text'}"                         		>{{o.parent}}</td>
-					<tr ng-show="!$data || !$data.length" class="text-center">
-						<td colspan="5">No Valued Components found.</td>
-					</tr>					
+			<table ng-table="self.tableParams" show-filter="self.showFilter" class="table table-condensed table-hover table-striped">
+				<tr ng-repeat="o in $data">
+					<td class="select-col" header-class="'select-col'">
+						<input type="checkbox" ng-click="self.toggleItem(o)"/>
+					</td>
+					<td data-title="'Pillar'"
+						sortable="'pillar'"
+						filter="{'pillar':'select'}"
+						filter-data="self.pillars">{{o.pillar}}</td>
+					<td data-title="'Name'"
+						sortable="'name'"
+						filter="{ 'name':'text'}">{{o.name}}</td>
 				</tr>
 			</table>
 		</section>
@@ -24,8 +25,8 @@
 
 	<div class="modal-footer">
 		<div>
-			<button class="btn btn-default" href ng-click="">Cancel</button>
-			<button class="btn btn-default" href ng-click="">Ok</button>
+			<button class="btn btn-default" href ng-click="self.cancel()">Cancel</button>
+			<button class="btn btn-default" href ng-click="self.ok()">Ok</button>
 		</div>
 	</div>
 	
